@@ -1,28 +1,34 @@
 package com.example.fan_cafe.schedule;
 
-import com.example.fan_cafe.comment.domain.Comment;
+import com.example.fan_cafe.global.exception.CustomException;
 import com.example.fan_cafe.schedule.application.ScheduleService;
 import com.example.fan_cafe.schedule.domain.Schedule;
 import com.example.fan_cafe.schedule.infrastructure.ScheduleRepository;
 import com.example.fan_cafe.schedule.interfaces.dto.ScheduleListResponse;
 import com.example.fan_cafe.schedule.interfaces.dto.ScheduleRequest;
 import com.example.fan_cafe.schedule.interfaces.dto.ScheduleResponse;
+
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.*;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+
 
 @ExtendWith(MockitoExtension.class)
 public class ScheduleServiceTest {
@@ -55,7 +61,54 @@ public class ScheduleServiceTest {
         var response = scheduleService.create(request);
 
         //then
-        verify(scheduleRepository, times(1)).save(any(Schedule.class));
+        ArgumentCaptor<Schedule> captor = ArgumentCaptor.forClass(Schedule.class);
+        verify(scheduleRepository).save(captor.capture());
+
+        Schedule saved = captor.getValue();
+        assertThat(saved.getTitle()).isEqualTo(request.getTitle());
+        assertThat(saved.getLocation()).isEqualTo(request.getLocation());
+    }
+
+    @Test
+    void shouldThrowException_WhenStartAtIsAfterEndAt() {
+        // given
+        ScheduleRequest request = ScheduleRequest.builder()
+                .title("시간 오류")
+                .location("오류 장소")
+                .startAt(LocalDateTime.of(2025, 7, 10, 20, 0))
+                .endAt(LocalDateTime.of(2025, 7, 10, 19, 0))
+                .build();
+
+        // when & then
+        assertThrows(CustomException.class, () -> scheduleService.create(request));
+    }
+
+    @Test
+    void shouldCreateSchedule_WhenEndAtIsNull() {
+        // given
+        ScheduleRequest request = ScheduleRequest.builder()
+                .title("종료 시간 없음")
+                .location("장소")
+                .startAt(LocalDateTime.of(2025, 7, 20, 14, 0))
+                .build(); // endAt 생략
+
+        // when
+        var response = scheduleService.create(request);
+
+        // then
+        assertThat(response.getEndAt()).isNull();
+    }
+
+    private List<ScheduleResponse> mockGroupedSchedules() {
+        LocalDateTime start1 = LocalDateTime.of(2025, 7, 5, 10, 0);
+        LocalDateTime start2 = LocalDateTime.of(2025, 7, 5, 15, 0);
+        LocalDateTime start3 = LocalDateTime.of(2025, 7, 10, 12, 0);
+
+        return List.of(
+                ScheduleResponse.from(Schedule.of("title1", "loc1", start1, start1.plusHours(1))),
+                ScheduleResponse.from(Schedule.of("title2", "loc2", start2, start2.plusHours(2))),
+                ScheduleResponse.from(Schedule.of("title3", "loc3", start3, start3.plusHours(1)))
+        );
     }
 
     @Test
@@ -64,15 +117,7 @@ public class ScheduleServiceTest {
         int year = 2025;
         int month = 7;
 
-        LocalDateTime start1 = LocalDateTime.of(2025, 7, 5, 10, 0);
-        LocalDateTime start2 = LocalDateTime.of(2025, 7, 5, 15, 0);
-        LocalDateTime start3 = LocalDateTime.of(2025, 7, 10, 12, 0);
-
-        Schedule s1 = Schedule.of("title1", "loc1", start1, start1.plusHours(1));
-        Schedule s2 = Schedule.of("title2", "loc2", start2, start2.plusHours(2));
-        Schedule s3 = Schedule.of("title3", "loc3", start3, start3.plusHours(1));
-
-        List<Schedule> schedules = List.of(s1, s2, s3);
+        List<ScheduleResponse> schedules = mockGroupedSchedules();
         when(scheduleRepository.findByStartAtBetween(any(), any())).thenReturn(schedules);
 
         //when
@@ -80,12 +125,14 @@ public class ScheduleServiceTest {
 
         List<ScheduleListResponse> grouped = response.getSchedules();
 
-        assertEquals(2, grouped.size()); //2개의 그룹
-        assertEquals(LocalDate.of(2025, 7, 5), grouped.getFirst().getDate());//날짜 맞는지 확인
-        assertEquals(2, grouped.getFirst().getSchedules().size());
+        assertThat(response.getSchedules()).hasSize(2);
+        assertThat(grouped.getFirst().getDate()).isEqualTo(LocalDate.of(2025, 7, 5));
+
+        assertThat(grouped.get(0).getSchedules()).hasSize(2); // 7월 5일 2건
+        assertThat(grouped.get(1).getSchedules()).hasSize(1); // 7월 10일 1건
 
         //정렬 확인
-        assertTrue(grouped.get(0).getDate().isBefore(grouped.get(1).getDate()));
+        assertThat(grouped.get(0).getDate()).isBefore(grouped.get(1).getDate());
     }
 
     @Test
@@ -103,7 +150,23 @@ public class ScheduleServiceTest {
         var response = scheduleService.update(id, request);
 
         //then
-        assertEquals(mockSchedule.getTitle(), response.getTitle());
+        assertThat(response.getTitle()).isEqualTo(request.getTitle());
+        assertThat(response.getStartAt()).isEqualTo(request.getStartAt());
+    }
+
+    @Test
+    void shouldThrowException_WhenUpdateScheduleWithInvalidId() {
+        // given
+        Long invalidId = 999L;
+        ScheduleRequest request = ScheduleRequest.builder()
+                .title("수정 시도")
+                .startAt(LocalDateTime.of(2025, 7, 1, 12, 0))
+                .build();
+
+        when(scheduleRepository.findById(invalidId)).thenReturn(Optional.empty());
+
+        // when & then
+        assertThrows(CustomException.class, () -> scheduleService.update(invalidId, request));
     }
 
     @Test
@@ -117,7 +180,18 @@ public class ScheduleServiceTest {
         scheduleService.delete(id);
 
         //then
-        assertNotNull(mockSchedule.getDeletedAt());
+        assertThat(mockSchedule.getDeletedAt()).isNotNull();
     }
+
+    @Test
+    void shouldThrowException_WhenDeleteScheduleWithInvalidId() {
+        // given
+        Long invalidId = 404L;
+        when(scheduleRepository.findById(invalidId)).thenReturn(Optional.empty());
+
+        // when & then
+        assertThrows(CustomException.class, () -> scheduleService.delete(invalidId));
+    }
+
 
 }
